<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/TV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_1"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/edd_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        android:textSize="25sp"
        android:layout_marginTop="15sp"

        />
    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:maxLength="35"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_name" />
</LinearLayout>
    <Button
        android:id="@+id/btn_end_1activity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="end|center"
        android:background="@color/colorPrimary"
        android:text="@string/next"/>
</FrameLayout >