<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/TV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_2"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_start_2activity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="start|center"
        android:background="@color/colorPrimary"
        android:text="@string/back"/>

    <Button
        android:id="@+id/btn_end_2activity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="end|center"
        android:background="@color/colorPrimary"
        android:text="@string/next"/>
</FrameLayout >